<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <!--标题图片-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/qq_bg">

    </LinearLayout>
    <!--菜单部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/menoy_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/text_1"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/ganga_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/text_2"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/heihei_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/text_3"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/weimi_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/text_4"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/unhappy_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/text_5"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/unhappy_icon"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/right_return"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/text_6"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/question_icon"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:onClick="OnExitNumber"
                android:text="@string/text_7"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
    <!--底部按钮菜单部分-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@null"
        android:gravity="bottom"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:drawableLeft="@mipmap/settings_icon"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/text_8"
            android:textSize="18sp"
            tools:ignore="Suspicious0dp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:drawableLeft="@mipmap/night_icon"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/text_9"
            android:textSize="18sp"
            tools:ignore="Suspicious0dp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:drawableLeft="@mipmap/night_icon"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/text_10"
            android:textSize="18sp"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>
</LinearLayout>