<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mdialog_bg">

    <RelativeLayout
        android:id="@+id/rl_exit_title"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_exit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textColor="@color/colorBlack"
            />
    </RelativeLayout>
    <!--对话框横线-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_exit_title"
        android:background="@color/colorGrey">
    </LinearLayout>
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_exit_title"
        android:layout_marginBottom="10dp"
        >

        <!--对话框按钮区域-->
        <RelativeLayout
            android:id="@+id/rl_btn_exit"
            android:minWidth="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_exit_title"
            android:layout_width="match_parent">
            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content">
                <!--取消按钮-->
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_cancel"
                    android:textColor="@color/colorBlue"
                    android:background="@null"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    />
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorGrey">
                </LinearLayout>
                <!--退出按钮-->
                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_exit"
                    android:textColor="@color/colorBlue"
                    android:background="@null"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>